--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--
-    normalize.css removes cross-browser differences in defaults, e.g.,
-    differences in how form elements appear between Firefox and IE
-    See: http://necolas.github.com/normalize.css/
-  -->
+
   <link rel="stylesheet" href="/css/normalize.css">
-  <!--
-    application.css is where you put your styles
-  -->
   <link rel="stylesheet" href="/css/application.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
-  <title></title>
+  <title>TagScraper</title>
 </head>
+
 <body>
-  <%= yield %>
+  <div class="container">
+    <h1 class="logo">&#60;TagScraper/&#62;</h1>
+    <%= yield %>
+  </div>
 </body>
 </html>
