--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -12,3 +12,13 @@
         </pre>
     </section>
 <% end %>
+
+<% if @tag_counts %>
+    <section id="tags">
+        <ul id="tag-list">
+            <% @tag_counts.each do |tag, count| %>
+                <li>&#60;<%= tag %>&#62;: <%= count %></li>
+            <% end %>
+        </ul>
+    </section>
+<% end %>
