Add prettyprint class

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -7,7 +7,7 @@
 
 <% if @source %>
     <section id="source">
-        <pre>
+        <pre class="prettyprint" lang-html>
             <%= @source %>
         </pre>
     </section>
