--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -17,7 +17,7 @@
     <section id="tags">
         <ul id="tag-list">
             <% @tag_counts.each do |tag, count| %>
-                <li>&#60;<%= tag %>&#62;: <%= count %></li>
+                <li>&#60;<span><%= tag %></span>&#62;: <%= count %></li>
             <% end %>
         </ul>
     </section>
