Add action to form

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,5 @@
 <section id="scraper">
-    <form action="/">
+    <form action="/scrape">
         <input type="url" placeholder="http://www.google.com" name="url" required oninvalid="this.setCustomValidity('Enter a URL starting with http:// or https://')"
     oninput="setCustomValidity('')"/>
         <input type="submit" value="Go!"/>
