--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="/js/application.js"></script>
   <script src="//cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
   <title>TagScraper</title>
 </head>
