--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,25 +1,12 @@
 <section id="scraper">
+    <p>Welcome! Enter a URL below and hit 'Go!' to check out its source code.</p>
     <form action="/scrape">
-        <input type="url" placeholder="http://www.google.com" name="url" required oninvalid="this.setCustomValidity('Enter a URL starting with http:// or https://')"
+        <input type="url" value="<%= params[:url] %>" placeholder="http://www.google.com" name="url" required oninvalid="this.setCustomValidity('Enter a URL starting with http:// or https://')"
     oninput="setCustomValidity('')"/>
         <input type="submit" value="Go!"/>
     </form>
 </section>
 
-<% if @source %>
-    <section id="source">
-        <pre class="prettyprint" lang-html>
-                <%= @source %>
-        </pre>
-    </section>
-<% end %>
-
-<% if @tag_counts %>
-    <section id="tags">
-        <ul id="tag-list">
-            <% @tag_counts.each do |tag, count| %>
-                <li>&#60;<span><%= tag %></span>&#62;: <%= count %></li>
-            <% end %>
-        </ul>
-    </section>
-<% end %>
+<section id="results">
+    <%= erb :'_results', layout: false %>
+</section>
