--- a/public/css/application.css
+++ b/public/css/application.css
@@ -89,6 +89,14 @@ pre.prettyprint {
     width: 20%;
 }
 
+.waiting {
+    text-align: center;
+    width: 100%;
+    margin: 30px 0px;
+    border: 1px solid #ddd;
+
+}
+
 .container {
     max-width: 1000px;
     margin: 0 auto;
@@ -98,5 +106,7 @@ pre.prettyprint {
     background-color: yellow;
     font-weight: bold;
 }
+
+
 
 
